# blueprintsdk

./: CMakeLists.txt  LICENSE.txt  README.md  version.h.in
include/: BluePrint.h  Debug.h  Document.h  Icon.h  Node.h  Pin.h  UI.h  Utils.h
include/node_editor/: imgui_canvas.h  imgui_json.h  imgui_logger.h  imgui_node_editor.h  imgui_node_editor_internal.h  imgui_node_editor_internal.inl
src/: BluePrint.cpp  Context.cpp  Debug.cpp  Document.cpp  Icon.cpp  Node.cpp  Pin.cpp  UI.cpp  Utils.cpp
src/BuildInNodes/: BranchNode.h  ComparatorNode.h  CompareNode.h  ConstValueNode.h  DateTimeNode.h  DigitalPrintNode.h  DivisionNode.h  FileSelectNode.h  GroupNode.h  SubtractionNode.h  TimerNode.h  ToStringNode.h
src/BuildInNodes/CommonNode/: CommentNode.h  DummyNode.h  GroupNode.h  ImMatExitPointNode.h  ImMatFilterEntryPointNode.h  ImMatFusionEntryPointNode.h  SystemEntryPointNode.h  SystemExitPointNode.h
src/BuildInNodes/MediaNode/: ImMatALMNode.h  ImMatAlphaFusionNode.h  ImMatAudioEqualizerNode.h  ImMatAudioFadeFusionNode.h  ImMatAudioGain.h  ImMatBilateralNode.h  ImMatBlurFusionNode.h  ImMatBoxNode.h  ImMatBrightnessNode.h  ImMatCASNode.h  ImMatCannyNode.h  ImMatChromakeyNode.h  ImMatColorBalanceNode.h  ImMatColorInvertNode.h  ImMatContrastNode.h  ImMatCropNode.h  ImMatDebandNode.h  ImMatDeinterlaceNode.h  ImMatDoorFusionNode.h  ImMatEntryPointNode.h  ImMatExitPointNode.h  ImMatExposureNode.h  ImMatFadeFusionNode.h  ImMatFilterExitPointNode.h  ImMatFlipNode.h  ImMatGammaNode.h  ImMatGaussianBlurNode.h  ImMatHQDN3DNode.h  ImMatHueNode.h  ImMatLaplacianNode.h  ImMatLut3DNode.h  ImMatMoveFusionNode.h  ImMatRenderNode.h  ImMatSaturationNode.h  ImMatSliderFusionNode.h  ImMatSobelNode.h  ImMatUSMNode.h  ImMatVibranceNode.h  ImMatWhitebalanceNode.h  ImMediaSourceNode.h  (+1 more)
src/BuildInNodes/MediaNode/VkShader/: ImMatALMNode.h  ImMatAlphaFusionNode.h  ImMatBilateralNode.h  ImMatBlurFusionNode.h  ImMatBookFlipFusionNode.h  ImMatBounceFusionNode.h  ImMatBowTieFusionNode.h  ImMatBoxNode.h  ImMatBrightnessNode.h  ImMatBurnFusionNode.h  ImMatBurnOutFusionNode.h  ImMatButterflyWaveFusionNode.h  ImMatCASNode.h  ImMatCannabisLeafFusionNode.h  ImMatCannyNode.h  ImMatChromakeyNode.h  ImMatCircleBlurFusionNode.h  ImMatCircleCropFusionNode.h  ImMatColorBalanceNode.h  ImMatColorCurveNode.h  ImMatColorInvertNode.h  ImMatColorPhaseFusionNode.h  ImMatColourDistanceFusionNod.h  ImMatColourDistanceFusionNode.h  ImMatContrastNode.h  ImMatCrazyParametricFusionNode.h  ImMatCropNode.h  ImMatCrossWarpFusionNode.h  ImMatCrossZoomFusionNode.h  ImMatCrosshatchFusionNode.h  ImMatCubeFusionNode.h  ImMatDebandNode.h  ImMatDeinterlaceNode.h  ImMatDirectionalWarpFusionNode.h  ImMatDoomScreenFusionNode.h  ImMatDoorFusionNode.h  ImMatDoorwayFusionNode.h  ImMatDreamyFusionNode.h  ImMatDreamyZoomFusionNode.h  ImMatExposureNode.h  (+52 more)
src/BuildInNodes/SystemNode/: AdditionNode.h  BranchNode.h  ComparatorNode.h  CompareNode.h  ConstValueNode.h  CountNode.h  DateTimeNode.h  DigitalPrintNode.h  DivisionNode.h  EntryPointNode.h  ExitPointNode.h  FileSelectNode.h  FlipFlopNode.h  FloatCountNode.h  LoopNode.h  MultiplicationNode.h  SubtractionNode.h  SwitchNode.h  TimerNode.h  ToStringNode.h
src/node_editor/: imgui_canvas.cpp  imgui_json.cpp  imgui_logger.cpp  imgui_node_editor.cpp  imgui_node_editor_api.cpp
test/: Blueprints_datetime.json  test.cpp
